# srm-executables-gui

./: .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: release.yml  tests.yml
examples/: Input Data.csv
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/multi-timepoint-engine/: lbfgs.lib
src-tauri/icons/: icon.icns
src-tauri/src/: aggregator.rs  analyzer.rs  commands.rs  grouper.rs  lib.rs  main.rs  parser.rs  processor.rs  serializer.rs
src-tauri/src/lib/: serde.rs
src-tauri/src/processor/: aggregator.rs  executor.rs  helpers.rs  mod.rs  parser.rs  peptide_isolator.rs
src-tauri/srm-gui-workspace/data/: Data.csv  HeavyWater_Data.txt
src/lib/: utils.ts
src/lib/assets/css/: cal-sans.css
src/lib/components/: Spinner.svelte
src/lib/components/interfaces/dashboard/: ActionBar.svelte  Dropzone.svelte  DropzoneOverlay.svelte  EmptyStateInputSelector.svelte  InputData.svelte  InputDataList.svelte  InputDataRow.svelte  InputFileSelector.svelte  InstallDepsCard.svelte  SettingsCard.svelte  TimepointEngineSelector.svelte
src/lib/components/ui/: CogButton.svelte  ContentContainer.svelte
src/lib/stores/: input.ts  settings.ts
src/lib/types/: form.ts
src/routes/: +layout.svelte  +page.svelte  ActionBar.svelte  SettingsCard.svelte  TimepointEngineSelector.svelte
src/routes/(default)/: +layout.svelte  +page.svelte  InputDataCard.svelte  InstallDepsCard.svelte  ProcessDataButton.svelte
(+5 files in other folders)
